refactor: enhance API docs and clean code - Added @PreAuthorize for role-based access control. - Expanded @ApiResponses with 400, 403, 404 error codes. - Refactored code for better readability and consistency.